# ros-camera-manager

./: README.md
ros-camera-manager/: CMakeLists.txt  package.xml
ros-camera-manager-msgs/: CMakeLists.txt  package.xml
ros-camera-manager-msgs/msg/: CameraInfo.msg  CameraStream.msg
ros-camera-manager-msgs/srv/: GetStatus.srv  QueryCamera.srv  RegisterCamera.srv
ros-camera-manager/include/ros_camera_manager/: client.h
ros-camera-manager/launch/: server.launch.py
ros-camera-manager/ros_camera_manager/: cli.py  client.py  database.py  server.py
ros-camera-manager/src/: client.cc
