<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_camera_manager</name>
  <version>0.1.1</version>
  <description>Flexible camera management</description>
  <maintainer email="danem.mason@gmail.com">Dane Mason</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>launch_ros</depend>
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>ros_camera_manager_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>